[package]
name = "create_lgtm_image"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "create_lgtm_image"
path = "src/create_lgtm_image/main.rs"

[dependencies]
axum = { version="0.6", features=["multipart"] }
tokio = { version = "1", features = ["full"]}
image = "0.24"
imageproc = "0.23"
rusttype = "0.9"
tower-http = { version="0.4", features = ["cors"] }
reqwest = { version = "0.11", features = ["blocking", "json" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
