[package]
name = "create_lgtm_image"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "create_lgtm_image"
path = "src/create_lgtm_image/main.rs"

[dependencies]
axum = { version="0.6", features=["multipart"] }
tokio = { version = "1", features = ["full"]}
image = "0.24"
imageproc = "0.23"
rusttype = "0.9"
tower-http = { version="0.4", features = ["cors", "fs"] }
reqwest = { version = "=0.10.10", features = ["blocking", "json" ] } # Pinned to an even older version
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13"
anyhow = "1.0.98"
thiserror = "2.0.12"

[dev-dependencies]
mockall = "0.13.1"
